--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(SOURCE_FILES
         src/matrix.cpp
         src/mask.h
         src/calibration.h
+        src/cholesky.h
         src/reconstruct3d.h)
-
 
 set(PPMLOADER_FILES src/ppmloader/ppmloader.cpp)
 
@@ -18,7 +18,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic")
 
 add_library(metnum-tp1-base ${PPMLOADER_FILES} ${SOURCE_FILES})
 
-add_executable(main src/main.cpp src/cholesky.h)
-target_link_libraries (main metnum-tp1-base)
+add_executable(procesar src/main.cpp)
+target_link_libraries (procesar metnum-tp1-base)
 
 add_subdirectory(test)
