Eliminar codigo sobrante y deshabilitar tests para entregar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(SOURCE_FILES
         src/matrix.h
         src/gauss.h
         src/cholesky.h
-        src/matrix.cpp
         src/mask.h
         src/calibration.h
         src/cholesky.h
@@ -21,4 +20,4 @@ add_library(metnum-tp1-base ${PPMLOADER_FILES} ${SOURCE_FILES})
 add_executable(procesar src/main.cpp)
 target_link_libraries (procesar metnum-tp1-base)
 
-add_subdirectory(test)
+#add_subdirectory(test)
